Adding relatedProducts response
